Archive2/a3/fbcb9d4c28a4f0/output
main.cpp:28:16: error: use of overloaded operator '+' is ambiguous (with operand types 'Num<1>' and 'Num<-1>')
  auto b = one + mone;
           ~~~ ^ ~~~~
main.cpp:8:12: note: candidate function [with N = 1, M = -1]
Num<N + M> operator+(Num<N>, Num<M>)
           ^
main.cpp:14:6: note: candidate function [with N = 1]
Zero operator+(Num<N>, Num<-N>)
     ^
main.cpp:31:17: error: use of overloaded operator '+' is ambiguous (with operand types 'Num<0>' and 'Num<0>')
  auto c = null + null;
           ~~~~ ^ ~~~~
main.cpp:8:12: note: candidate function [with N = 0, M = 0]
Num<N + M> operator+(Num<N>, Num<M>)
           ^
main.cpp:14:6: note: candidate function [with N = 0]
Zero operator+(Num<N>, Num<-N>)
     ^
2 errors generated.
